412959654: (fix) make test modules visible on zoom in (#1264)

--- a/modules/ui/src/app/components/device-tests/device-tests.component.scss
+++ b/modules/ui/src/app/components/device-tests/device-tests.component.scss
@@ -17,10 +17,6 @@
 @use 'variables';
 @use 'mixins';
 
-:host {
-  overflow: hidden;
-}
-
 .device-tests-form {
   height: 100%;
   display: grid;
@@ -45,8 +41,4 @@
   line-height: 20px;
   letter-spacing: 0.2px;
   color: colors.$on-surface-variant;
-}
-
-.device-form-test-modules {
-  overflow: auto;
 }
